Fix hovers on mobile on note list item

--- a/src/app/components/notes/notes/notes.component.sass
+++ b/src/app/components/notes/notes/notes.component.sass
@@ -179,6 +179,9 @@ div#notes-page-container
                     &:not(.active):hover circle
                         fill: transparent
 
+                        @media (hover: none)  // remove hover on mobiles
+                            fill: $brown-light
+
                     &.active circle
                         fill: $black
                         opacity: .3
